...
        app:boxCornerRadiusTopStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusBottomEnd="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="5"
            android:textAppearance="?attr/textAppearanceBodyLarge" />
...
